Make css as internal sheet

--- a/lib/swoop/renderer/chart_renderer/chart.html.erb
+++ b/lib/swoop/renderer/chart_renderer/chart.html.erb
@@ -4,7 +4,23 @@
     <meta charset="utf-8">
     <title><%= title %></title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <style media="screen">
+      body {
+        font: 12px sans-serif;
+      }
+
+      .flex-container {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        justify-content: space-around;
+      }
+
+      .flex-item {
+        width: 850px;
+        height: 450px;
+      }
+    </style>
   </head>
   <body>
     <h2>SWOOP : Swift x Objective-C Comparison Report</h2>
